Crash on saving with visible particle system #55452

Closed
opened 2018-06-12 13:02:41 +02:00 by Tom Pov · 5 comments

System Information
Win10 64, Ryzen7 1800x, GTX1070

Blender Version
Last worked version: 8f49299

Short description of error
Crash with particle system, no crash if particle system is not visable

Exact steps for others to reproduce the error
In the attached blendfile the particle system of the plane is set to unvisible, so saving is OK.
Switch it to visible and try to save the file, Blender shuts down immediately.
At least for me, this happens to every file containing a visible particle system.

TEST.blend

**System Information** Win10 64, Ryzen7 1800x, GTX1070 **Blender Version** Last worked version: 8f49299 **Short description of error** Crash with particle system, no crash if particle system is not visable **Exact steps for others to reproduce the error** In the attached blendfile the particle system of the plane is set to unvisible, so saving is OK. Switch it to visible and try to save the file, Blender shuts down immediately. At least for me, this happens to every file containing a visible particle system. [TEST.blend](https://archive.blender.org/developer/F3677395/TEST.blend)
Author

Added subscriber: @tompov

Added subscriber: @tompov
Member

Added subscribers: @mont29, @lichtwerk

Added subscribers: @mont29, @lichtwerk
Bastien Montagne was assigned by Philipp Oeser 2018-06-12 15:57:26 +02:00
Member

Can confirm this.
Caused by G.main removal in d0956e9cb3, 7b6af843c2

when saving with the Save Preview Images User Preference, blender will trigger offscreen drawing, [which will call view3d_draw_objects with NULL bmain -- this wasnt an issue before, because the needed EvaluationContext was taken from G.main...]

@tompov: Emergency workaround: disable Save Preview Images (User Preference >> File)

1  draw_dupli_objects_color              view3d_draw.c     2118 0x197fb33 
2  draw_dupli_objects                    view3d_draw.c     2259 0x198014c 
3  view3d_draw_objects                   view3d_draw.c     2928 0x1982013 
4  ED_view3d_draw_offscreen              view3d_draw.c     3240 0x1982cb1 
5  ED_view3d_draw_offscreen_imbuf        view3d_draw.c     3373 0x1983298 
6  ED_view3d_draw_offscreen_imbuf_simple view3d_draw.c     3531 0x1983a9a 
7  blend_file_thumb                      wm_files.c        1046 0x1857fa8 
8  wm_file_write                         wm_files.c        1151 0x1858394 
9  wm_save_as_mainfile_exec              wm_files.c        2100 0x185a7df 

@mont29: mind having a look?

Can confirm this. Caused by G.main removal in d0956e9cb3, 7b6af843c2 when saving with the `Save Preview Images` User Preference, blender will trigger offscreen drawing, [which will call view3d_draw_objects with NULL bmain -- this wasnt an issue before, because the needed EvaluationContext was taken from G.main...] @tompov: Emergency workaround: disable `Save Preview Images` (User Preference >> File) ``` 1 draw_dupli_objects_color view3d_draw.c 2118 0x197fb33 2 draw_dupli_objects view3d_draw.c 2259 0x198014c 3 view3d_draw_objects view3d_draw.c 2928 0x1982013 4 ED_view3d_draw_offscreen view3d_draw.c 3240 0x1982cb1 5 ED_view3d_draw_offscreen_imbuf view3d_draw.c 3373 0x1983298 6 ED_view3d_draw_offscreen_imbuf_simple view3d_draw.c 3531 0x1983a9a 7 blend_file_thumb wm_files.c 1046 0x1857fa8 8 wm_file_write wm_files.c 1151 0x1858394 9 wm_save_as_mainfile_exec wm_files.c 2100 0x185a7df ``` @mont29: mind having a look?

This issue was referenced by ec4ce908db

This issue was referenced by ec4ce908db6124037c4dfd927f22a9eec0ba4d52

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55452
No description provided.